welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:6: error: reassignment to val
  nbre=3
      ^Program:8: error: reassignment to val
    versLAvant= true
              ^Program:10: error: reassignment to val
    versLAvant= false
              ^Program:15: error: too many arguments for method retourne: ()Unit
    retourne(nbre)
            ^