welcome.lessons.welcome.methods.args.MethodsArgs.scala.code



def move(nbre:Int,versLAvant:Boolean){
  nbre=3
 	if (estFaceMur()==true){
    versLAvant= true
  }else{
    versLAvant= false
  }
  if (versLAvant==true){
    avance(nbre)
  }else{
    retourne(nbre)
  }
}